--- a/files/en-us/web/webdriver/errors/invalidargument/index.html
+++ b/files/en-us/web/webdriver/errors/invalidargument/index.html
@@ -7,7 +7,7 @@ tags:
   - WebDriver
   - invalid argument
 ---
-<p>The <strong>invalid argument</strong> error is a <a href="/en-US/docs/Web/WebDriver/Errors">WebDriver error</a> that occurs when the arguments passed to a <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Commands">command</a> are either invalid or malformed.</p>
+<p>The <strong>invalid argument</strong> error is a <a href="/en-US/docs/Web/WebDriver/Errors">WebDriver error</a> that occurs when the arguments passed to a <a href="/en-US/docs/Web/WebDriver/Commands">command</a> are either invalid or malformed.</p>
 
 <p>Invalid argument errors can be likened to <code><a href="/en-US/docs/Web/JavaScript/Reference/Global_Objects/TypeError">TypeError</a></code>s in <a href="/en-US/docs/Web/JavaScript">JavaScript</a>, in that they can occur for a great many APIs when the input value is not of the expected type or malformed in some way. See the type- and bounds constraints for each <a href="/en-US/docs/Web/WebDriver/Commands">WebDriver command</a>.</p>
 
