--- a/files/en-us/web/webdriver/errors/index.html
+++ b/files/en-us/web/webdriver/errors/index.html
@@ -70,12 +70,12 @@ tags:
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/ElementClickIntercepted">element click intercepted</a></td>
    <td>{{HTTPStatus(400, "400 Bad Request")}}</td>
-   <td>The <a class="internalDFN" href="/en-US/docs/Web/WebDriver/ElementClick">Element Click</a> <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> could not be completed because the <a class="internalDFN" href="/en-US/docs/Web/WebDriver/WebElement">element</a> receiving the events is obscuring the element that was requested clicked.</td>
+   <td>The <a href="/en-US/docs/Web/WebDriver/ElementClick">Element Click</a> <a href="/en-US/docs/Web/WebDriver/Command">command</a> could not be completed because the <a href="/en-US/docs/Web/WebDriver/WebElement">element</a> receiving the events is obscuring the element that was requested clicked.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/ElementNotInteractable">element not interactable</a></td>
    <td>{{HTTPStatus(400, "400 Bad Request")}}</td>
-   <td>A <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> could not be completed because the element is not pointer- or keyboard interactable.</td>
+   <td>A <a href="/en-US/docs/Web/WebDriver/Command">command</a> could not be completed because the element is not pointer- or keyboard interactable.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/InsecureCertificate">insecure certificate</a></td>
@@ -85,7 +85,7 @@ tags:
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/InvalidArgument">invalid argument</a></td>
    <td>{{HTTPStatus(400, "400 Bad Request")}}</td>
-   <td>The arguments passed to a <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> are either invalid or malformed.</td>
+   <td>The arguments passed to a <a href="/en-US/docs/Web/WebDriver/Command">command</a> are either invalid or malformed.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/InvalidCookieDomain">invalid cookie domain</a></td>
@@ -95,7 +95,7 @@ tags:
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/InvalidElementState">invalid element state</a></td>
    <td>{{HTTPStatus(400, "400 Bad Request")}}</td>
-   <td>A <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> could not be completed because the element is in an invalid state, e.g. attempting to <a class="internalDFN" href="/en-US/docs/Web/WebDriver/ElementClear">clear</a> an element that isn't both editable and resettable.</td>
+   <td>A <a href="/en-US/docs/Web/WebDriver/Command">command</a> could not be completed because the element is in an invalid state, e.g. attempting to <a href="/en-US/docs/Web/WebDriver/ElementClear">clear</a> an element that isn't both editable and resettable.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/InvalidSelector">invalid selector</a></td>
@@ -125,7 +125,7 @@ tags:
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/NoSuchCookie">no such cookie</a></td>
    <td>{{HTTPStatus(404, "404 Not Found")}}</td>
-   <td>No cookie matching the given path name was found amongst the <a class="internalDFN" href="/en-US/docs/Glossary/Cookie">cookies</a> of the current <a href="/en-US/docs/Web/API/Document">document</a>.</td>
+   <td>No cookie matching the given path name was found amongst the <a href="/en-US/docs/Glossary/Cookie">cookies</a> of the current <a href="/en-US/docs/Web/API/Document">document</a>.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/NoSuchElement">no such element</a></td>
@@ -135,12 +135,12 @@ tags:
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/NoSuchFrame">no such frame</a></td>
    <td>{{HTTPStatus(404, "404 Not Found")}}</td>
-   <td>A <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> to switch to a frame could not be satisfied because the frame could not be found.</td>
+   <td>A <a href="/en-US/docs/Web/WebDriver/Command">command</a> to switch to a frame could not be satisfied because the frame could not be found.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/NoSuchWindow">no such window</a></td>
    <td>{{HTTPStatus(404, "404 Not Found")}}</td>
-   <td>A <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> to switch to a window could not be satisfied because the window could not be found.</td>
+   <td>A <a href="/en-US/docs/Web/WebDriver/Command">command</a> to switch to a window could not be satisfied because the window could not be found.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/ScriptTimeout">script timeout</a></td>
@@ -155,7 +155,7 @@ tags:
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/StaleElementReference">stale element reference</a></td>
    <td>{{HTTPStatus(404, "404 Not Found")}}</td>
-   <td>A <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> failed because the referenced <a class="internalDFN" href="/en-US/docs/Web/WebDriver/WebElement">element</a> is no longer attached to the DOM.</td>
+   <td>A <a href="/en-US/docs/Web/WebDriver/Command">command</a> failed because the referenced <a href="/en-US/docs/Web/WebDriver/WebElement">element</a> is no longer attached to the DOM.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/Timeout">timeout</a></td>
@@ -165,7 +165,7 @@ tags:
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/UnableToSetCookie">unable to set cookie</a></td>
    <td>{{HTTPStatus(500, "500 Internal Server Error")}}</td>
-   <td>A <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> to set a cookie’s value could not be satisfied.</td>
+   <td>A <a href="/en-US/docs/Web/WebDriver/Command">command</a> to set a cookie’s value could not be satisfied.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/UnableToCaptureScreen">unable to capture screen</a></td>
@@ -180,22 +180,22 @@ tags:
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/UnknownCommand">unknown command</a></td>
    <td>{{HTTPStatus(404, "404 Not Found")}}</td>
-   <td>A <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> could not be executed because the driver was unaware of it.</td>
+   <td>A <a href="/en-US/docs/Web/WebDriver/Command">command</a> could not be executed because the driver was unaware of it.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/UnknownError">unknown error</a></td>
    <td>{{HTTPStatus(500, "500 Internal Server Error")}}</td>
-   <td>An unknown error occurred in the driver whilst processing the <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a>.</td>
+   <td>An unknown error occurred in the driver whilst processing the <a href="/en-US/docs/Web/WebDriver/Command">command</a>.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/UnknownMethod">unknown method</a></td>
    <td>{{HTTPStatus(405, "405 Method Not Allowed")}}</td>
-   <td>The requested <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> matched a known URL but did not match a method for that URL.</td>
+   <td>The requested <a href="/en-US/docs/Web/WebDriver/Command">command</a> matched a known URL but did not match a method for that URL.</td>
   </tr>
   <tr>
    <td><a href="/en-US/docs/Web/WebDriver/Errors/UnsupportedOperation">unsupported operation</a></td>
    <td>{{HTTPStatus(500, "500 Internal Server Error")}}</td>
-   <td>Indicates that a <a class="internalDFN" href="/en-US/docs/Web/WebDriver/Command">command</a> that should have executed properly cannot be supported for some reason.</td>
+   <td>Indicates that a <a href="/en-US/docs/Web/WebDriver/Command">command</a> that should have executed properly cannot be supported for some reason.</td>
   </tr>
  </tbody>
 </table>
